--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h2>is composed of passionate young Professionals that shares the same dream of working towards their main goal of helping people learn and grow with technology to succeed in their different line of businesses.</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
-            <i class="bi bi-play-circle"><a href="https://youtu.be/XpL1_2sMkSs" class="glightbox btn-watch-video"></i><span>Watch Video</span></a>
+            <a href="https://youtu.be/XpL1_2sMkSs" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
